refactor: extract settings feature (#461)
* refactor: enhance Section component with variant support and remove rightElement prop

* feat: add advanced settings section with developer mode and reasoning options

feat: create MCP section for managing MCP servers and recommended servers

feat: implement tools section to display available tools and integrations

feat: add workflows section to list and edit workflows in the workspace

feat: create workspace rules section for importing and managing rules

feat: implement accordion UI component for collapsible sections

feat: add quota component to display billing usage and limits

feat: create section component for consistent layout of settings sections

feat: add settings checkbox option component for toggleable settings

feat: implement tool badge component for displaying tool information

feat: add hooks for managing settings state and auto-approval logic

refactor: update settings store to manage new settings and auto-approval features

fix: update auth settings route to use new settings page structure

* update

* refactor: simplify import paths for approval and settings features

--- a/packages/vscode-webui/tsconfig.json
+++ b/packages/vscode-webui/tsconfig.json
@@ -22,7 +22,11 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/components/*": ["./src/components/*"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/features/approval": ["./src/features/approval"],
+      "@/features/settings": ["./src/features/settings"],
+      "@/features/todo": ["./src/features/todo"]
     }
   }
 }
