refactor: extract chat feature (#462)
* feat: refactor chat state management and update imports for better organization

* refactor: move getWorkflowPath function to WorkflowsSection component and update DefaultModelId constant

--- a/packages/vscode-webui/tsconfig.json
+++ b/packages/vscode-webui/tsconfig.json
@@ -26,7 +26,8 @@
       "@/lib/*": ["./src/lib/*"],
       "@/features/approval": ["./src/features/approval"],
       "@/features/settings": ["./src/features/settings"],
-      "@/features/todo": ["./src/features/todo"]
+      "@/features/todo": ["./src/features/todo"],
+      "@/features/chat": ["./src/features/chat"]
     }
   }
 }
